--- a/spells/claim-stream.yaml
+++ b/spells/claim-stream.yaml
@@ -14,18 +14,20 @@ ins:
         claimed_amount: ${claimed_before}
         start_time: ${start_time}
         end_time: ${end_time}
+        beneficiary_dest: !!binary ${beneficiary_dest}
 
 outs:
   # (1) payout to beneficiary (no charms)
   - address: ${beneficiary_addr}
-    # Depending on the spell schema, you will set amount/value here
-    # value: ${payout_sats}
+    amount: ${payout_sats}
 
   # (2) updated stream UTXO (keeps remaining BTC + updated StreamState)
   - address: ${addr_0}
+    amount: ${remaining_sats}
     charms:
       $00:
         total_amount: ${total_amount}
         claimed_amount: ${claimed_after}
         start_time: ${start_time}
         end_time: ${end_time}
+        beneficiary_dest: !!binary ${beneficiary_dest}
