--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ license = "MIT"
 charms-sdk = { version = "0.10.0" }
 serde = { version = "1.0", features = ["derive"] }
 sha2 = { version = "0.10.9" }
+hex = "0.4"
 
 [profile.release]
 lto = "fat"
